--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ boto==2.49.0
 boto3==1.10.13
 botocore==1.13.13
 certifi==2019.9.11
+channels==2.4.0
+channels-redis==2.4.1
 chardet==3.0.4
 dj-database-url==0.5.0
 dj-static==0.0.6
